load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "test_main",
    testonly = True,
    srcs = ["test_main.cc"],
    deps = [
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "util",
    testonly = True,
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "//sekai:proto_util",
        "@abseil-cpp//absl/log:absl_check",
        "@googletest//:gtest",
        "@protobuf",
    ],
)
