load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "scrape_thumbnails",
    srcs = ["scrape_thumbnails.py"],
    deps = [
        "@abseil-py//absl:app",
        "@abseil-py//absl/flags",
    ],
)

cc_binary(
    name = "compile_template_main",
    srcs = ["compile_template_main.cc"],
    deps = [
        "//base",
        "//sekai:file_util",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings",
        "@inja",
        "@nlohmann_json//:json",
    ],
)
