load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "card",
    srcs = ["card.cc"],
    hdrs = ["card.h"],
    deps = [
        "//sekai/db/proto:all",
        "//sekai/proto:card_cc_proto",
        "//sekai/proto:card_state_cc_proto",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@ctml",
    ],
)

cc_library(
    name = "card_timeline",
    srcs = ["card_timeline.cc"],
    hdrs = ["card_timeline.h"],
    deps = [
        "@ctml",
    ],
)

cc_library(
    name = "max_cr",
    srcs = ["max_cr.cc"],
    hdrs = ["max_cr.h"],
    deps = [
        "//frontend:display_text",
        "//sekai:array_size",
        "//sekai:character",
        "//sekai:max_character_rank",
        "//sekai:proto_util",
        "//sekai/db:master_db",
        "//sekai/db/proto:all",
        "//sekai/proto:max_character_rank_cc_proto",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings:str_format",
        "@ctml",
    ],
)

cc_library(
    name = "report",
    srcs = ["report.cc"],
    hdrs = ["report.h"],
    data = [
        "//sekai/html/styles:report",
    ],
    deps = [
        ":card",
        "//sekai:file_util",
        "//sekai/db/proto:all",
        "//sekai/proto:team_cc_proto",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@ctml",
    ],
)

cc_library(
    name = "team",
    srcs = ["team.cc"],
    hdrs = ["team.h"],
    deps = [
        ":card",
        "//sekai/db/proto:all",
        "//sekai/proto:team_cc_proto",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@ctml",
    ],
)

cc_library(
    name = "version",
    srcs = ["version.cc"],
    hdrs = ["version.h"],
    deps = [
        "//sekai:version",
        "@abseil-cpp//absl/strings:str_format",
        "@ctml",
    ],
)

cc_binary(
    name = "version_main",
    srcs = ["version_main.cc"],
    data = [
        "//data:flat-db",
    ],
    deps = [
        ":version",
        "//base",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:flags",
    ],
)
