load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary")

cc_library(
    name = "analyze_team_handler",
    srcs = ["analyze_team_handler.cc"],
    hdrs = ["analyze_team_handler.h"],
    deps = [
        ":handler",
        "//sekai/run_analysis/proto:service_cc_proto",
        "@protobuf",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        #"//sekai/db:master_db",
    ],
)

cc_library(
    name = "handler",
    hdrs = ["handler.h"],
    deps = [
        "//sekai/run_analysis/proto:service_cc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@protobuf",
    ],
)

cc_binary(
    name = "server_main",
    srcs = [
        "server_main.cc",
    ],
    linkopts = [
        "--oformat=js",
        "-sEXPORTED_RUNTIME_METHODS=stringToUTF8,lengthBytesUTF8,UTF8ToString,getValue",
        "-sEXPORTED_FUNCTIONS=_main,_HandleRequest,_Malloc,_Free",
        "-sENVIRONMENT=web",
        "-sMODULARIZE",
        "-sUSE_PTHREADS=0",
    ],
    deps = [
        ":handler",
        ":analyze_team_handler",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/container:flat_hash_map",
        #"//sekai/db:master_db",
        "//base",
        "@abseil-cpp//absl/base:no_destructor",
    ],
)

wasm_cc_binary(
    name = "server_wasm",
    cc_target = ":server_main",
)

pkg_tar(
    name = "server",
    srcs = [
        "worker.js",
        "wrangler.toml",
        ":server_wasm",
    ],
)

cc_library(
    name = "parser",
    srcs = ["parser.cc"],
    hdrs = ["parser.h"],
    deps = [
        "//base:util",
        "//sekai/db/json:parser",
        "//sekai/run_analysis/proto:run_data_cc_proto",
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cc"],
    data = ["testdata/run_data_1.json"],
    deps = [
        ":parser",
        "//sekai:file_util",
        "//testing:test_main",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest",
    ],
)
